fixing ph responsive cannot align margin

--- a/style/dropDownBtn.css
+++ b/style/dropDownBtn.css
@@ -144,7 +144,7 @@
     gap: 30px;
   }
   #signup, #login{
-    width: 200px;
+    width: 300px;
     border: 1px solid var(--iconic-color--);
     border-radius: 50px;
     padding: 0;
@@ -156,7 +156,7 @@
     color: var(--dark-font-color--);
   }
   .clickdown-content{
-    min-width: 400px;
+    width: 300px;
     padding: 0px;
     border-radius: 5px;
   }
