--- a/style/light-mode.css
+++ b/style/light-mode.css
@@ -20,6 +20,5 @@
 }
 
 body, nav, .entry-section, .download-container, .container{
-    width: 100%;
     transition: var(--transistion-time--);
 }
