--- a/style/respDropdown.css
+++ b/style/respDropdown.css
@@ -80,3 +80,8 @@
   display: block;
 }
 
+@media screen and (max-width: 500px) {
+  #resp-myDropdown{
+    width: 300px;
+  }
+}
